force-app/main/default/objects/Deliverable__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Returns the Salesforce Base URL for this org (e.g. https://soscv.lightning.force.com)</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>