force-app/main/default/objects/Deliverable__c/fields/Deliverable_Name_Translated__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Name_Translated__c</fullName>
    <label>Deliverable  Name Translated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>