force-app/main/default/objects/Deliverable__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Describe your deliverable if needed.</inlineHelpText>
    <label>Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>