force-app/main/default/objects/Deliverable__c/fields/Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>Description_Translated__c</fullName>
    <label>Description Translated</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>