force-app/main/default/objects/Deliverable__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>DV-{000000}</displayFormat>
    <inlineHelpText>System Generated ID, use for reference</inlineHelpText>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>