force-app/main/default/objects/Deliverable__c/fields/Is_Application_Package__c.field-meta.xml
<CustomField>
    <fullName>Is_Application_Package__c</fullName>
    <formula>(TEXT(Type__c) == &apos;Budget&apos; &amp;&amp; TEXT(Phase__c) == &apos;Formulation&apos;) || (TEXT(Type__c) == &apos;Agreement&apos;) || (TEXT(Type__c) == &apos;Concept note&apos;) || (TEXT(Type__c) == &apos;Framework&apos;)</formula>
    <label>Is_Application_Package</label>
    <type>Checkbox</type>
</CustomField>