force-app/main/default/objects/Deliverable__c/fields/IsAgreement__c.field-meta.xml
<CustomField>
    <fullName>IsAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAgreement</label>
    <type>Checkbox</type>
</CustomField>