force-app/main/default/objects/Deliverable__c/fields/Link_To_Concept_Note_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Concept_Note_Checklist__c</fullName>
    <label>Link To Concept Note Checklist</label>
    <type>Url</type>
</CustomField>