force-app/main/default/objects/Deliverable__c/fields/Link_To_Deliverable_Template__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Deliverable_Template__c</fullName>
    <inlineHelpText>If applicable add link to the deliverable template stored in Sharepoint.</inlineHelpText>
    <label>Link To Deliverable Template</label>
    <type>Url</type>
</CustomField>