force-app/main/default/objects/Deliverable__c/fields/Link_To_Financial_Plan_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Financial_Plan_Checklist__c</fullName>
    <label>Link To Financial Plan Checklist</label>
    <type>Url</type>
</CustomField>