force-app/main/default/objects/Deliverable__c/fields/Link_to_Sharepoint_doc_store__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Sharepoint_doc_store__c</fullName>
    <inlineHelpText>Add link to the document that is stored in Sharepoint.</inlineHelpText>
    <label>Link to Sharepoint doc store</label>
    <type>Url</type>
</CustomField>