force-app/main/default/objects/Deliverable__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Project phase to which the deliverable is related. Pre-filled for standard deliverables.</description>
    <inlineHelpText>Project phase to which the deliverable is related. Pre-filled for standard deliverables.</inlineHelpText>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Formulation</fullName>
            </value>
            <value>
                <fullName>Implemention</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Set up</fullName>
                <isActive>false</isActive>
                <label>Set up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>