force-app/main/default/objects/Deliverable__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project ID to which the deliverable is related. Filled by the system.</inlineHelpText>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>