force-app/main/default/objects/Deliverable__c/fields/Project_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Project_Agreements__c</fullName>
    <formula>Project__c &lt;&gt; &apos;&apos; &amp;&amp; (RecordType.DeveloperName = &apos;Agreement&apos; || TEXT(Type__c) == &apos;Concept note&apos; || TEXT(Type__c) == &apos;Budget&apos; || TEXT(Type__c) == &apos;Framework&apos;)</formula>
    <label>Project Agreements</label>
    <type>Checkbox</type>
</CustomField>