force-app/main/default/objects/Deliverable__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is responsible for making this deliverable available ? Can be assigned only to already existing project member</description>
    <inlineHelpText>Who is responsible for making this deliverable available ? Can be assigned only to already existing project member</inlineHelpText>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>