force-app/main/default/objects/Deliverable__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Set to done once the deliverable is available and passed applicable validation cycle. Add link to the Sharepoint where the deliverable is stored.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Done</fullName>
                <default>true</default>
                <label>Not Done</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Agreement in progress</fullName>
            </value>
            <value>
                <fullName>In development</fullName>
            </value>
            <value>
                <fullName>Agreement signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>