force-app/main/default/objects/Deliverable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Choose what is the most suitable. For standard deliverables this filed is pre-filled.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Concept note</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>