force-app/main/default/objects/Deliverable__c/recordTypes/Agreement.recordType-meta.xml
<RecordType>
    <fullName>Agreement</fullName>
    <active>true</active>
    <label>Agreement</label>
</RecordType>