force-app/main/default/objects/Deliverable__c/listViews/Agreement_Deliverables.listView-meta.xml
<ListView>
    <fullName>Agreement_Deliverables</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Agreement</value>
    </filters>
    <label>Agreement Deliverables</label>
</ListView>