force-app/main/default/objects/Deliverable__c/listViews/All_Concept_Notes.listView-meta.xml
<ListView>
    <fullName>All_Concept_Notes</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>concept note</value>
    </filters>
    <label>All Concept Notes</label>
</ListView>