force-app/main/default/objects/Deliverable__c/listViews/My_Deliverables.listView-meta.xml
<ListView>
    <fullName>My_Deliverables</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Deadline__c</columns>
    <columns>Link_to_Sharepoint_doc_store__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Deliverables</label>
</ListView>