force-app/main/default/objects/Deliverable__c/listViews/SOS_Deliverables.listView-meta.xml
<ListView>
    <fullName>SOS_Deliverables</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Deadline__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Responsible_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsible_Person__c</field>
        <operation>contains</operation>
        <value>Daum</value>
    </filters>
    <label>SOS Deliverables</label>
</ListView>